--- a/examples/benchmarks/tablebench/package.json
+++ b/examples/benchmarks/tablebench/package.json
@@ -1,7 +1,8 @@
 {
-	"name": "@fluid-experimental/tablebench",
+	"name": "@fluid-internal/tablebench",
 	"version": "2.0.0-internal.8.0.0",
-	"description": "Tree",
+	"private": true,
+	"description": "Table focused benchmarks",
 	"homepage": "https://fluidframework.com",
 	"repository": {
 		"type": "git",
@@ -15,9 +16,9 @@
 	"module": "lib/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"bench": "mocha --timeout 999999 --perfMode --parentProcess --fgrep \"Table benchmark\" --reporter @fluid-tools/benchmark/dist/MochaReporter.js",
+		"bench": "mocha --timeout 999999 --perfMode --parentProcess --fgrep @Benchmark --reporter @fluid-tools/benchmark/dist/MochaReporter.js",
 		"bench:profile": "mocha --v8-prof --v8-logfile=profile.log --v8-no-logfile-per-isolate --timeout 999999 --perfMode --fgrep @Benchmark --reporter @fluid-tools/benchmark/dist/MochaReporter.js && node --prof-process profile.log > profile.txt && rimraf profile.log && echo See results in profile.txt",
-		"bench:profile:chrome": "mocha --enable-source-maps --inspect-brk --timeout 999999 --perfMode --fgrep @Benchmark --reporter @fluid-tools/benchmark/dist/MochaReporter.js",
+		"bench:profile:inspect-brk": "mocha --enable-source-maps --inspect-brk --timeout 999999 --perfMode --fgrep @Benchmark --reporter @fluid-tools/benchmark/dist/MochaReporter.js",
 		"build": "fluid-build . --task build",
 		"build:commonjs": "fluid-build . --task commonjs",
 		"build:compile": "fluid-build . --task compile",
@@ -33,25 +34,21 @@
 		"postpack": "tar -cf ./tablebench.test-files.tar ./src/test ./dist/test",
 		"prettier": "prettier --check . --cache --ignore-path ../../../.prettierignore",
 		"prettier:fix": "prettier --write . --cache --ignore-path ../../../.prettierignore",
-		"start:docker": "webpack serve --config webpack.config.js --env mode=docker",
-		"start:r11s": "webpack serve --config webpack.config.js --env mode=r11s",
-		"start:spo": "webpack serve --config webpack.config.js --env mode=spo",
-		"start:spo-df": "webpack serve --config webpack.config.js --env mode=spo-df",
-		"start:tinylicious": "webpack serve --config webpack.config.js --env mode=tinylicious",
+		"start": "start-server-and-test tinylicious 7070 start:webpack",
+		"start:t9s": "tinylicious",
+		"start:webpack": "webpack serve --config webpack.config.js --env mode=tinylicious",
 		"test": "npm run test:mocha",
 		"test:benchmark:report": "mocha --exit --perfMode --parentProcess --fgrep @Benchmark --reporter @fluid-tools/benchmark/dist/MochaReporter.js --timeout 60000",
 		"test:mocha": "mocha",
 		"test:mocha:verbose": "cross-env FLUID_TEST_VERBOSE=1 npm run test:mocha",
 		"tsc": "tsc",
-		"ts-loader": "^9.3.0",
-		"webpack": "^5.82.0",
-		"webpack-cli": "^4.9.2",
-		"webpack-dev-server": "~4.6.0",
-		"webpack-merge": "^5.8.0"
+		"webpack": "webpack --env production",
+		"webpack:dev": "webpack --env development"
 	},
 	"dependencies": {
-		"@fluidframework/azure-client": "workspace:~",
 		"@fluid-internal/client-utils": "workspace:~",
+		"@fluid-private/stochastic-test-utils": "workspace:~",
+		"@fluidframework/azure-client": "workspace:~",
 		"@fluidframework/core-interfaces": "workspace:~",
 		"@fluidframework/datastore-definitions": "workspace:~",
 		"@fluidframework/matrix": "workspace:~",
@@ -59,24 +56,31 @@
 		"@fluidframework/tree": "workspace:~"
 	},
 	"devDependencies": {
-		"@fluid-private/stochastic-test-utils": "workspace:~",
 		"@fluid-tools/benchmark": "^0.48.0",
 		"@fluidframework/build-common": "^2.0.3",
 		"@fluidframework/build-tools": "0.29.0-225750",
 		"@fluidframework/eslint-config-fluid": "^3.2.0",
+		"@fluidframework/id-compressor": "workspace:~",
 		"@fluidframework/mocha-test-setup": "workspace:~",
 		"@fluidframework/test-tools": "^1.0.195075",
 		"@types/mocha": "^9.1.1",
 		"@types/node": "^18.19.0",
 		"cross-env": "^7.0.3",
 		"eslint": "~8.50.0",
+		"mocha": "^10.2.0",
 		"mocha-json-output-reporter": "^2.0.1",
 		"mocha-multi-reporters": "^1.5.1",
-		"mocha": "^10.2.0",
 		"moment": "^2.21.0",
 		"prettier": "~3.0.3",
 		"rimraf": "^4.4.0",
-		"typescript": "~5.1.6"
+		"start-server-and-test": "^1.11.7",
+		"tinylicious": "^3.0.0",
+		"ts-loader": "^9.3.0",
+		"typescript": "~5.1.6",
+		"webpack": "^5.82.0",
+		"webpack-cli": "^4.9.2",
+		"webpack-dev-server": "~4.6.0",
+		"webpack-merge": "^5.8.0"
 	},
 	"typeValidation": {
 		"disabled": true,
