--- a/experimental/dds/ephemeral-independent/package.json
+++ b/experimental/dds/ephemeral-independent/package.json
@@ -14,19 +14,29 @@
 	"type": "module",
 	"exports": {
 		"./alpha": {
-			"import": "./lib/index.js",
-			"require": "./dist/index.js"
+			"import": {
+				"types": "./lib/ephemeral-independent-alpha.d.ts",
+				"default": "./lib/index.js"
+			},
+			"require": {
+				"types": "./dist/ephemeral-independent-alpha.d.ts",
+				"default": "./dist/index.js"
+			}
 		}
 	},
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
 	"scripts": {
+		"api": "fluid-build . --task api",
+		"api-extractor:commonjs": "api-extractor run --config ./api-extractor-cjs.json",
+		"api-extractor:esnext": "api-extractor run --local --config ./api-extractor-esm.json",
 		"build": "fluid-build . --task build",
 		"build:commonjs": "fluid-build . --task commonjs",
 		"build:compile": "fluid-build . --task compile",
+		"build:docs": "api-extractor run --local",
 		"build:esnext": "tsc --project ./tsconfig.esm.json",
 		"build:test": "tsc --project ./src/test/tsconfig.json",
-		"clean": "rimraf --glob dist lib \"**/*.tsbuildinfo\" \"**/*.build.log\"",
+		"check:release-tags": "api-extractor run --local --config ./api-extractor-lint.json",
+		"ci:build:docs": "api-extractor run",
+		"clean": "rimraf --glob dist lib \"**/*.tsbuildinfo\" \"**/*.build.log\" _api-extractor-temp",
 		"eslint": "eslint --format stylish src",
 		"eslint:fix": "eslint --format stylish src --fix --fix-type problem,suggestion,layout",
 		"format": "npm run prettier:fix",
@@ -59,6 +69,22 @@
 		"prettier": "~3.0.3",
 		"rimraf": "^4.4.0",
 		"typescript": "~5.1.6"
+	},
+	"fluidBuild": {
+		"tasks": {
+			"build:docs": {
+				"dependsOn": [
+					"build:esnext"
+				],
+				"script": false
+			},
+			"check:release-tags": [
+				"build:esnext"
+			],
+			"ci:build:docs": [
+				"build:esnext"
+			]
+		}
 	},
 	"typeValidation": {
 		"disabled": true,
