--- a/tools/pipelines/build-docs.yml
+++ b/tools/pipelines/build-docs.yml
@@ -100,28 +100,28 @@ resources:
   pipelines:
   - pipeline: common_definitions
     source: Build - common-definitions
-    branch: $(Build.SourceBranchName)
+    branch: main
   - pipeline: common_utils
     source: Build - common-utils
-    branch: $(Build.SourceBranchName)
+    branch: main
   - pipeline: container_definitions
     source: Build - container-definitions
-    branch: $(Build.SourceBranchName)
+    branch: main
   - pipeline: core_interfaces
     source: Build - core-interfaces
-    branch: $(Build.SourceBranchName)
+    branch: main
   - pipeline: driver_definitions
     source: Build - driver-definitions
-    branch: $(Build.SourceBranchName)
+    branch: main
   - pipeline: protocol_definitions
     source: Build - protocol-definitions
-    branch: $(Build.SourceBranchName)
+    branch: main
   - pipeline: azure
     source: Build - azure
-    branch: $(Build.SourceBranchName)
+    branch: main
   - pipeline: client
     source: Build - client packages
-    branch: $(Build.SourceBranchName)
+    branch: main
     trigger:
       branches:
         include:
@@ -129,7 +129,7 @@ resources:
         - docs/**
   - pipeline: server
     source: server-routerlicious
-    branch: $(Build.SourceBranchName)
+    branch: main
 
 stages:
 - stage: build
