--- a/tools/pipelines/build-docs.yml
+++ b/tools/pipelines/build-docs.yml
@@ -88,32 +88,47 @@ variables:
   - name: pnpmStorePath
     value: $(Pipeline.Workspace)/.pnpm-store
 
+# TODO: Move trigger to pipeline designated for artifact model generation. Currently, 
+# the website docs builds and deploys on each commit. However, inconsistencies between 
+# the release branches and main is causing the website to change unexpectedly we can 
+# move the release/* trigger after separating the deploy step to another pipeline
 # no PR triggers
 trigger:
   branches:
     include:
-    - release/*
+    # - release/*
     - main
 pr: none
 
+# TODO: the download artifact step is currently targetting the latest pipeline run from each resource.
+# However, this is causing inconsistencies in the doc in scenarios where the latest runs on each pipeline
+# is not the same (e.g. mix of main and lts). Temporarily setting the branch to main explicitly.
 resources:
   pipelines:
   - pipeline: common_definitions
     source: Build - common-definitions
+    branch: main
   - pipeline: common_utils
     source: Build - common-utils
+    branch: main
   - pipeline: container_definitions
     source: Build - container-definitions
+    branch: main
   - pipeline: core_interfaces
     source: Build - core-interfaces
+    branch: main
   - pipeline: driver_definitions
     source: Build - driver-definitions
+    branch: main
   - pipeline: protocol_definitions
     source: Build - protocol-definitions
+    branch: main
   - pipeline: azure
     source: Build - azure
+    branch: main
   - pipeline: client
     source: Build - client packages
+    branch: main
     trigger:
       branches:
         include:
@@ -121,6 +136,7 @@ resources:
         - docs/**
   - pipeline: server
     source: server-routerlicious
+    branch: main
 
 stages:
 - stage: build
