--- a/packages/drivers/odsp-driver-definitions/package.json
+++ b/packages/drivers/odsp-driver-definitions/package.json
@@ -128,6 +128,10 @@
 			"RemovedEnumDeclaration_OdspErrorType": {
 				"forwardCompat": false,
 				"backCompat": false
+			},
+			"RemovedEnumDeclaration_ShareLinkTypes": {
+				"backCompat": false,
+				"forwardCompat": false
 			}
 		}
 	}
