--- a/packages/loader/driver-utils/package.json
+++ b/packages/loader/driver-utils/package.json
@@ -69,9 +69,9 @@
 		"@fluidframework/core-interfaces": "workspace:~",
 		"@fluidframework/core-utils": "workspace:~",
 		"@fluidframework/driver-definitions": "workspace:~",
-		"@fluidframework/gitresources": "^3.0.0",
-		"@fluidframework/protocol-base": "^3.0.0",
-		"@fluidframework/protocol-definitions": "^3.1.0",
+		"@fluidframework/gitresources": "^3.1.0-231702",
+		"@fluidframework/protocol-base": "^3.1.0-231702",
+		"@fluidframework/protocol-definitions": "^3.2.0-231454",
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"axios": "^1.6.2",
 		"lz4js": "^0.2.0",
