Explicitly specify pr-labeler and pr-validation workflows permissions

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -11,6 +11,9 @@ on:
       - next
       - release/*
 
+permissions:
+  pull-requests: write
+
 jobs:
   validate-codeowners:
     name: Validate CODEOWNERS
