--- a/server/gitrest/packages/gitrest/config.json
+++ b/server/gitrest/packages/gitrest/config.json
@@ -44,6 +44,7 @@
 			"name": "redisFs"
 		},
 		"persistLatestFullSummary": false,
+		"persistLatestFullEphemeralSummary": false,
 		"repoPerDocEnabled": false,
 		"enableRepositoryManagerMetrics": false,
 		"apiMetricsSamplingPeriod": 100,
