--- a/server/charts/historian/values.yaml
+++ b/server/charts/historian/values.yaml
@@ -71,6 +71,7 @@ gitrest:
     enableSlimGitInit: false
     enableRedisFsMetrics: false
     enableHashmapRedisFs: false
+    enableRedisFsOptimizedStat: false
     redisApiMetricsSamplingPeriod: 0
   redis:
     host: redis
