--- a/server/gitrest/packages/gitrest/config.json
+++ b/server/gitrest/packages/gitrest/config.json
@@ -53,6 +53,7 @@
 		"enableSlimGitInit": false,
 		"enableRedisFsMetrics": true,
 		"enableHashmapRedisFs": false,
+		"enableRedisFsOptimizedStat": false,
 		"redisApiMetricsSamplingPeriod": 0,
 		"enforceStrictPersistedFullSummaryReads": false
 	},
