--- a/tools/pipelines/build-docs.yml
+++ b/tools/pipelines/build-docs.yml
@@ -333,5 +333,6 @@ stages:
             skip_app_build: true # site was built in previous stage
             cwd: $(Build.SourcesDirectory)
             app_location: 'docs/public'
+            api_location: 'docs/api'
             output_location: ''
             azure_static_web_apps_api_token: '${{ variables.deploymentToken }}'
