--- a/tools/pipelines/templates/upload-json-steps.yml
+++ b/tools/pipelines/templates/upload-json-steps.yml
@@ -19,87 +19,42 @@ steps:
   clean: true
 
 # Download the api-extractor outputs
-- task: DownloadPipelineArtifact@2
-  inputs:
-    buildType: specific
-    project: internal
-    pipeline: Build - common-definitions
-    buildVersionToDownload: latestFromBranch
+- template: templates/download-pipeline-artifact.yml
+  parameters:
+    pipelineDefinition: Build - common-definitions
     branchName: ${{ variables['Build.SourceBranch'] }}
-    artifact: _api-extractor-temp
-    allowPartiallySucceededBuilds: true
-- task: DownloadPipelineArtifact@2
-  inputs:
-    buildType: specific
-    project: internal
-    pipeline: Build - common-utils
-    buildVersionToDownload: latestFromBranch
+- template: templates/download-pipeline-artifact.yml
+  parameters:
+    pipelineDefinition: Build - common-utils
     branchName: ${{ variables['Build.SourceBranch'] }}
-    artifact: _api-extractor-temp
-    allowPartiallySucceededBuilds: true
-- task: DownloadPipelineArtifact@2
-  inputs:
-    buildType: specific
-    project: internal
-    pipeline: Build - container-definitions
-    buildVersionToDownload: latestFromBranch
+- template: templates/download-pipeline-artifact.yml
+  parameters:
+    pipelineDefinition: Build - container-definitions
     branchName: ${{ variables['Build.SourceBranch'] }}
-    artifact: _api-extractor-temp
-    allowPartiallySucceededBuilds: true
-- task: DownloadPipelineArtifact@2
-  inputs:
-    buildType: specific
-    project: internal
-    pipeline: Build - core-interfaces
-    buildVersionToDownload: latestFromBranch
+- template: templates/download-pipeline-artifact.yml
+  parameters:
+    pipelineDefinition: Build - core-interfaces
     branchName: ${{ variables['Build.SourceBranch'] }}
-    artifact: _api-extractor-temp
-    allowPartiallySucceededBuilds: true
-- task: DownloadPipelineArtifact@2
-  inputs:
-    buildType: specific
-    project: internal
-    pipeline: Build - driver-definitions
-    buildVersionToDownload: latestFromBranch
+- template: templates/download-pipeline-artifact.yml
+  parameters:
+    pipelineDefinition: Build - driver-definitions
     branchName: ${{ variables['Build.SourceBranch'] }}
-    artifact: _api-extractor-temp
-    allowPartiallySucceededBuilds: true
-- task: DownloadPipelineArtifact@2
-  inputs:
-    buildType: specific
-    project: internal
-    pipeline: Build - protocol-definitions
-    buildVersionToDownload: latestFromBranch
+- template: templates/download-pipeline-artifact.yml
+  parameters:
+    pipelineDefinition: Build - protocol-definitions
     branchName: ${{ variables['Build.SourceBranch'] }}
-    artifact: _api-extractor-temp
-    allowPartiallySucceededBuilds: true
-- task: DownloadPipelineArtifact@2
-  inputs:
-    buildType: specific
-    project: internal
-    pipeline: Build - azure
-    buildVersionToDownload: latestFromBranch
+- template: templates/download-pipeline-artifact.yml
+  parameters:
+    pipelineDefinition: Build - azure
     branchName: ${{ variables['Build.SourceBranch'] }}
-    artifact: _api-extractor-temp
-    allowPartiallySucceededBuilds: true
-- task: DownloadPipelineArtifact@2
-  inputs:
-    buildType: specific
-    project: internal
-    pipeline: Build - client packages
-    buildVersionToDownload: latestFromBranch
+- template: templates/download-pipeline-artifact.yml
+  parameters:
+    pipelineDefinition: Build - client packages
     branchName: ${{ variables['Build.SourceBranch'] }}
-    artifact: _api-extractor-temp
-    allowPartiallySucceededBuilds: true   
-- task: DownloadPipelineArtifact@2
-  inputs:
-    buildType: specific
-    project: internal
-    pipeline: server-routerlicious
-    buildVersionToDownload: latestFromBranch
+- template: templates/download-pipeline-artifact.yml
+  parameters:
+    pipelineDefinition: server-routerlicious
     branchName: ${{ variables['Build.SourceBranch'] }}
-    artifact: _api-extractor-temp
-    allowPartiallySucceededBuilds: true
 
 # Copy and merge the api-extractor outputs to a central location
 - task: CopyFiles@2
