--- a/tools/pipelines/templates/upload-json-steps.yml
+++ b/tools/pipelines/templates/upload-json-steps.yml
@@ -15,6 +15,9 @@ parameters:
   default: false
 
 steps:
+- checkout: none
+  clean: true
+
 # Download the api-extractor outputs
 - template: download-pipeline-artifact.yml
   parameters:
