--- a/build-tools/packages/build-tools/.prettierignore
+++ b/build-tools/packages/build-tools/.prettierignore
@@ -1,5 +1,7 @@
-/api-report
-/dist
-/lib
-# Generated type-tests
-**/*.generated.ts
+# Ignore all files...
+**/*.*
+**/bin
+
+# ...except JSON files not handled by biome
+!**/tsconfig.json
+!**/package.json
