--- a/build-tools/packages/build-tools/package.json
+++ b/build-tools/packages/build-tools/package.json
@@ -22,16 +22,19 @@
 		"build:commonjs": "npm run tsc && npm run build:test",
 		"build:compile": "npm run build:commonjs",
 		"build:test": "tsc --project ./src/test/tsconfig.json",
+		"check:biome": "biome format .",
+		"check:format": "npm run check:biome && npm run check:prettier",
+		"check:prettier": "prettier --check . --cache",
 		"clean": "rimraf --glob dist lib \"**/*.tsbuildinfo\" \"**/*.build.log\" nyc",
 		"compile": "fluid-build . --task compile",
 		"eslint": "eslint --format stylish src",
 		"eslint:fix": "eslint --format stylish src --fix --fix-type problem,suggestion,layout",
-		"format": "npm run prettier:fix",
-		"lint": "npm run prettier && npm run eslint",
-		"lint:fix": "npm run prettier:fix && npm run eslint:fix",
+		"format": "npm run format:biome && npm run format:prettier",
+		"format:biome": "biome format --write .",
+		"format:prettier": "prettier --write . --cache",
+		"lint": "npm run eslint",
+		"lint:fix": "npm run eslint:fix",
 		"list-repo-files": "cd ../../.. && git ls-files -co --exclude-standard",
-		"prettier": "prettier --check . --cache --ignore-path ../../../.prettierignore",
-		"prettier:fix": "prettier --write . --cache --ignore-path ../../../.prettierignore",
 		"test": "npm run test:mocha",
 		"test:mocha": "mocha --recursive dist/test",
 		"tsc": "tsc"
@@ -83,7 +86,7 @@
 		"concurrently": "^8.2.1",
 		"eslint": "~8.51.0",
 		"mocha": "^10.2.0",
-		"prettier": "~3.0.3"
+		"prettier": "~3.2.4"
 	},
 	"engines": {
 		"node": ">=14.17.0"
