--- a/tools/pipelines/templates/include-publish-docker-service.yml
+++ b/tools/pipelines/templates/include-publish-docker-service.yml
@@ -14,7 +14,7 @@ parameters:
   type: string
 - name: tagName
   type: string
-  default:
+  default: ''
 
 stages:
 - stage: publish_docker_official
@@ -22,7 +22,7 @@ stages:
   displayName: Publish Official Docker Image
   condition: and(succeeded(), eq(variables['release'], 'release'))
   jobs:
-  - template: include-publish-docker-service-steps.yml
+  - template: /tools/pipelines/templates/1ES/include-publish-docker-service-steps.yml@self
     parameters:
       environment: container-registry-public
       containerRegistry: ${{ parameters.containerRegistry }}
@@ -30,4 +30,4 @@ stages:
       containerRegistryUrl: ${{ parameters.containerRegistryUrl }}
       containerName: public/${{ parameters.containerName }}
       tagName: ${{ parameters.tagName }}
-
+  
